[package]
name = "toolbox"
version = "0.0.1"
publish = false

[dependencies]
authorized_keys_generator = { path = "../authorized_keys_generator" }
clap = "~2.31"
env_logger = "~0.5"
log = "~0.4"
failure = "~0.1"
failure_derive = "~0.1"
psst = { path = "../psst" }
reqwest = "~0.8"
serde = "~1.0"
serde_derive = "~1.0"
serde_yaml = "0.7"
